feat(Inventory): 이벤트 추가 상품 수량을 계산하는 메서드 구현
- promotionApplicatble: 프로모션 적용 가능 확인
- calculatePromotionQuantity: 증정 상품 수량 계산